kubernetes/apps/production/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app.kubernetes.io/instance: homepage
  # 公開は Traefik Ingress に集約したため ClusterIP
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
